css/style.css
@font-face {
    font-family: 'Gilroy';
    font-weight: 300;
    font-style: normal;

    src: local('Gilroy-Light'),
    url('../fonts/Gilroy-Light.woff2') format('woff2'),
    url('../fonts/Gilroy-Light.woff') format('woff'),
    url('../fonts/Gilroy-Light.ttf') format('truetype');
}

@font-face {
    font-family: 'Gilroy';
    font-weight: 800;
    font-style: normal;

    src: local('Gilroy-ExtraBold'),
    url('../fonts/Gilroy-ExtraBold.woff2') format('woff2'),
    url('../fonts/Gilroy-ExtraBold.woff') format('woff'),
    url('../fonts/Gilroy-ExtraBold.ttf') format('truetype');
}

html {
    box-sizing: border-box;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

body {
    font-family: Open Sans, Arial, sans-serif;
    font-size: 15px;
    font-weight: 300;
    line-height: 30px;

    margin: 0;
    padding: 0;

    letter-spacing: .01em;

    color: #464646;
    background-color: #fff;
}

a {
    text-decoration: none;
}

img {
    display: block;

    max-width: 100%;
    max-height: 100%;
}

.visually-hidden {
    position: absolute;

    overflow: hidden;
    clip: rect(0 0 0 0);

    width: 1px;
    height: 1px;
    margin: -1px;
    padding: 0;

    white-space: nowrap;

    border: 0;

    -webkit-clip-path: inset(100%);

            clip-path: inset(100%);
}

.bottom-padded {
    margin-bottom: 62px;
}

.main-header {
    background-color: rgba(240, 197, 46, .5);
    box-shadow: inset 0 40px 0 0 #fff;
}

.main-header ul {
    list-style: none;
}

.main-header a {
    font: inherit;

    color: #000;
}

.main-header .main-header-logo {
    font-family: Gilroy, Arial, sans-serif;
    font-size: 48px;
    font-weight: bold;
    line-height: 42px;

    display: block;

    height: 44px;
    margin-bottom: 11px;

    text-transform: uppercase;

    color: #000;

    align-self: flex-start;
}

.main-header-logo:hover {
    color: rgba(0, 0, 0, .6);
}

.main-header-logo:active {
    color: rgba(0, 0, 0, .3);
}

.site-search {
    font-size: 0;

    position: relative;
}

.site-search::before {
    position: absolute;

    width: 40px;
    height: 49px;

    content: '';

    background-image: url('../img/search.svg');
    background-repeat: no-repeat;
    background-position: 4px center;
}

.search-field {
    font: inherit;
    font-size: 15px;
    line-height: 36px;

    width: 355px;
    height: 44px;
    padding-right: 0;
    padding-bottom: 5px;
    padding-left: 40px;

    opacity: .3;
    color: #000;
    border: none;
    outline: none;
    background-color: transparent;
}

.search-field:hover {
    opacity: .6;
}

.search-field:focus {
    opacity: 1;
    border-bottom: 2px solid #000;
}

.search-button {
    font: inherit;
    font-size: 15px;
    line-height: 36px;

    visibility: hidden;

    width: 85px;
    padding-top: 4px;
    padding-bottom: 5px;

    color: #000;
    border: 2px solid #000;
    background-color: transparent;
}

.search-field:focus ~ .search-button {
    visibility: visible;
}

.search-button:hover {
    color: #fff;
    background-color: #000;
}

.search-button:active {
    visibility: visible;

    color: rgba(255, 255, 255, .3);
    background-color: #000;
}

.main-header .action-login,
.main-header .action-dashboard,
.main-header .action-logout,
.main-header .action-compare,
.main-header .action-cart {
    line-height: 36px;

    position: relative;
}

.main-header .action-logout {
    opacity: .3;
}

.main-header .action-login,
.main-header .action-dashboard {
    padding-left: 27px;
}

.main-header .action-compare {
    padding-left: 20px;
}

.main-header .action-cart {
    padding-left: 24px;
}

.menu-btn {
    display: block;

    height: 49px;
    padding-top: 6px;
}

.main-header .action-login::before,
.main-header .action-dashboard::before,
.main-header .action-compare::before,
.main-header .action-cart::before {
    position: absolute;
    bottom: 0;
    left: 0;

    width: 27px;
    height: 36px;
    padding-bottom: 19px;

    content: '';

    background-repeat: no-repeat;
    background-position: left bottom;
    background-origin: content-box;
}

.main-header .action-login::before,
.main-header .action-dashboard::before {
    background-image: url('../img/user.svg');
}

.main-header .action-compare::before {
    background-image: url('../img/compare.svg');
}

.main-header .action-cart::before {
    background-image: url('../img/cart.svg');
}

.main-header .action-login:hover,
.main-header .action-dashboard:hover,
.main-header .action-logout:hover,
.main-header .action-compare:hover,
.main-header .action-cart:hover {
    opacity: .6;
}

.main-header .action-login:active,
.main-header .action-dashboard:active,
.main-header .action-logout:active,
.main-header .action-compare:active,
.main-header .action-cart:active {
    opacity: .3;
}

li.catalog-navigation-item a {
    font-family: Open Sans, Arial, sans-serif;
    font-size: 15px;
    font-weight: 300;
    line-height: 30px;

    letter-spacing: .01em;
    text-transform: none;

    color: #000;
}

.navigation-item a,
.drop-menu-trigger,
.drop-menu-trigger-wrapper {
    font-family: Gilroy, Arial, sans-serif;
    font-size: 18px;
    font-weight: bold;
    line-height: 1.2;

    position: relative;

    letter-spacing: .2em;
    text-transform: uppercase;

    color: #000;
}

.drop-menu-trigger {
    color: inherit;
}

.drop-menu-trigger-wrapper:hover {
    cursor: pointer;

    color: rgba(0, 0, 0, .6);
}

.navigation-item a:hover {
    cursor: pointer;

    opacity: .6;
}

.navigation-item a:active,
.drop-menu-trigger:active {
    opacity: .3;
}

.drop-menu-trigger {
    margin-right: 10px;
    padding: 0;

    cursor: pointer;

    border: 0;
    background-color: transparent;
}

.promo-slide {
    display: none;
}

.promo-slider {
    position: relative;

    min-height: 504px;
}

.promo-toggle {
    bottom: 149px;
}
/* ... */

